<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.ligitabl</groupId>
        <artifactId>ligitabl-parent</artifactId>
        <version>0.1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>com.ligitabl</groupId>
    <artifactId>ligitabl-model</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>LigiTabl Model</name>
    <description>Data model: jOOQ generated code and Liquibase changelogs</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jooq.version>3.19.10</jooq.version>
        <postgresql.version>42.7.4</postgresql.version>
    <!-- lombok.version inherited from root pom -->
        <liquibase.plugin.version>4.23.1</liquibase.plugin.version>
        <liquibase.version>4.23.1</liquibase.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>
        <assertj.version>3.26.3</assertj.version>
        <jakarta.validation.version>3.1.0</jakarta.validation.version>
        <!-- Default: skip jOOQ codegen to allow fast builds; use -Pwith-jooq to enable -->
        <jooq.codegen.skip>true</jooq.codegen.skip>
        <jackson.version>2.17.2</jackson.version>
    </properties>

    <dependencies>
        <!-- Needed at compile time for generated code types -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${jooq.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Needed to compile the custom naming strategy in this module -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen</artifactId>
            <version>${jooq.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Lombok for model POJOs -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Jakarta Validation API for annotations like @NotNull in model classes -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>${jakarta.validation.version}</version>
        </dependency>

        <!-- Test dependencies: Testcontainers, Liquibase, Postgres driver, jOOQ runtime -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibase.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- JSON mapping for jsonb columns (teams, phases) -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>${jooq.version}</version>
                <executions>
                    <execution>
                        <id>generate-jooq</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <skip>${jooq.codegen.skip}</skip>
                            <jdbc>
                                <driver>org.postgresql.Driver</driver>
                                <url>jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}</url>
                                <user>${DB_USER}</user>
                                <password>${DB_PASSWORD}</password>
                            </jdbc>
                            <generator>
                                <name>org.jooq.codegen.JavaGenerator</name>
                                <database>
                                    <name>org.jooq.meta.postgres.PostgresDatabase</name>
                                    <inputSchema>public</inputSchema>
                                </database>
                                <strategy>
                                    <name>com.ligitabl.jooq.JooqGeneratorNamingStrategy</name>
                                </strategy>
                                <target>
                                    <packageName>com.ligitabl.model.db</packageName>
                                    <directory>${project.build.directory}/generated-sources/jooq</directory>
                                </target>
                            </generator>
                        </configuration>
                        <inherited>false</inherited>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.postgresql</groupId>
                        <artifactId>postgresql</artifactId>
                        <version>${postgresql.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>com.ligitabl</groupId>
                        <artifactId>jooq-codegen</artifactId>
                        <version>${project.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>add-jooq-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/jooq</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- By default, exclude integration tests tagged with @Tag("integration") -->
                    <groups>!integration</groups>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>with-jooq</id>
            <properties>
                <!-- Enable jOOQ code generation -->
                <jooq.codegen.skip>false</jooq.codegen.skip>
            </properties>
        </profile>
        <profile>
            <id>webmvc-tests</id>
            <properties>
                <!-- When running API WebMvc tests, skip compiling/executing tests in model to avoid no-jooq exclusions -->
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>
        <profile>
            <id>liquibase</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.liquibase</groupId>
                        <artifactId>liquibase-maven-plugin</artifactId>
                        <version>${liquibase.plugin.version}</version>
                        <configuration>
                            <changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
                            <url>jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}</url>
                            <username>${DB_USER}</username>
                            <password>${DB_PASSWORD}</password>
                            <driver>org.postgresql.Driver</driver>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.postgresql</groupId>
                                <artifactId>postgresql</artifactId>
                                <version>${postgresql.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>no-jooq</id>
            <properties>
                <!-- Skip jOOQ code generation entirely -->
                <jooq.codegen.skip>true</jooq.codegen.skip>
            </properties>
            <build>
                <plugins>
                    <!-- Exclude infra classes that depend on generated jOOQ types -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>**/infra/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
